feat(products): implement adding products - allow adding of new products
