# backend/app/Http/Requests/StoreProductRequest.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreProductRequest extends FormRequest
+{
+
+    public function authorize(): bool
+    {
+        return true;
+    }
+    
+    public function rules(): array
+    {
+        return [
+            'name' => 'required|string|unique:products,name',
+            'description' => 'required|string',
+            'price' => 'required|decimal:2',
+            'image' => 'sometimes|image|mimes:jpeg,png,jpg',
+            'category_id' => 'required|integer|exists:categories,id',
+        ];
+    }
+}
