# backend/routes/api.php
@@ -9,6 +9,8 @@ use Illuminate\Support\Facades\Route;
 Route::get('/categories', [CategoryController::class,'index']);
 Route::get('/categories/{categoryId}/products', [ProductController::class, 'getProductsByCategory']);
 Route::get('/products', [ProductController::class, 'index']);
+Route::post('/products', [ProductController::class, 'store']);
+
 
 Route::get('/user', function (Request $request) {
     return $request->user();
